--- a/SpeculPlus/SpeculPlus/EditPage.xaml
+++ b/SpeculPlus/SpeculPlus/EditPage.xaml
@@ -26,7 +26,13 @@
             <StackLayout Grid.Row="1" Grid.ColumnSpan="2">
                 <Label Margin="10,0,0,0" Text="Statistiques" FontAttributes="Bold" FontSize="Title" TextColor="Black" />
 
-                <Label Margin="10,0,0,0" Text="Prix Amazon" />
+                <Grid>
+                    <Label Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center" Margin="2,0,0,0" Text="Quantité en stock" />
+                    <Label Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Quantity}" />
+                    <Stepper Grid.Row="1" Grid.Column="1" Value="{Binding Quantity}" Minimum="0" Maximum="100000"  Increment="1" />
+                </Grid>
+
+                    <Label Margin="10,0,0,0" Text="Prix Amazon" />
                 <microcharts:ChartView HeightRequest="150" x:Name="priceChart" BackgroundColor="White" />
 
                 <Button
