--- a/SpeculPlus/SpeculPlus/EditPage.xaml
+++ b/SpeculPlus/SpeculPlus/EditPage.xaml
@@ -19,7 +19,7 @@
             </Grid.RowDefinitions>
             
             <StackLayout Grid.Column="0">
-                <Image Margin="0,0,0,0" Scale="0.8" Source="{Binding Image}"/>
+                <ImageButton Margin="0,0,0,0" Scale="0.8" Source="{Binding Image}" BackgroundColor="Transparent" Clicked="Picture_Clicked"/>
             </StackLayout>
 
             <!-- Statistiques -->
@@ -32,7 +32,7 @@
                     <Stepper Grid.Row="1" Grid.Column="1" Value="{Binding Quantity}" Minimum="0" Maximum="100000"  Increment="1" />
                 </Grid>
 
-                    <Label Margin="10,0,0,0" Text="Prix Amazon" />
+                    <Label Margin="10,0,0,0" Text="Évolution des prix" />
                 <microcharts:ChartView HeightRequest="150" x:Name="priceChart" BackgroundColor="White" />
 
                 <Button
@@ -56,7 +56,15 @@
                 </Grid>
                 <Grid>
                     <Label Margin="2,0,0,0" Text="Catégorie" />
-                    <Picker Margin="0,10,0,0" x:Name="listCat" Title="Catégorie" ItemDisplayBinding="{Binding Name}" />
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Picker Margin="0,10,0,0" x:Name="listCat" Title="Catégorie" ItemDisplayBinding="{Binding Name}" />
+                        <Button Grid.Column="1" Grid.Row="0" Text="+" WidthRequest="40" Clicked="AddCategory_Clicked"/>
+                    </Grid>
                 </Grid>
             </StackLayout>
             
