--- a/SpeculPlus/SpeculPlus/EditPage.xaml
+++ b/SpeculPlus/SpeculPlus/EditPage.xaml
@@ -27,13 +27,19 @@
                 <Label Margin="10,0,0,0" Text="Statistiques" FontAttributes="Bold" FontSize="Title" TextColor="Black" />
 
                 <Grid>
-                    <Label Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center" Margin="2,0,0,0" Text="Quantité en stock" />
+                    <Label Grid.Row="0" Grid.ColumnSpan="2" HorizontalOptions="Center" VerticalOptions="Center" Margin="0,0,0,0" Text="Quantité en stock" />
                     <Label Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Quantity}" />
                     <Stepper Grid.Row="1" Grid.Column="1" Value="{Binding Quantity}" Minimum="0" Maximum="100000"  Increment="1" />
                 </Grid>
 
-                <Label Margin="10,0,0,0" Text="Évolution des prix" />
-                <microcharts:ChartView HeightRequest="150" x:Name="priceChart" BackgroundColor="White" />
+                <Label Margin="0,0,0,0" Text="Évolution des prix" HorizontalOptions="Center" />
+                <microcharts:ChartView HeightRequest="150" x:Name="priceChart" BackgroundColor="White" Chart="{Binding Chart}">
+                    <microcharts:ChartView.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="AddPrice_Clicked"></TapGestureRecognizer>
+                    </microcharts:ChartView.GestureRecognizers>
+                </microcharts:ChartView>
+
+                <Label Text="Appuyez pour ajouter un prix" HorizontalOptions="Center"></Label>
 
                 <Button
                     VerticalOptions="EndAndExpand"
@@ -52,7 +58,7 @@
                 </Grid>
                 <Grid>
                     <Label Margin="2,0,0,0" Text="Prix du produit" />
-                    <Entry Margin="0,10,0,0" x:Name="price" Text="{Binding Price}" TextColor="Black" />
+                    <Entry Margin="0,10,0,0" x:Name="price" Text="{Binding Price}" Keyboard="Numeric" TextColor="Black" />
                 </Grid>
                 <Grid>
                     <Label Margin="2,0,0,0" Text="Catégorie" />
@@ -67,6 +73,21 @@
                     </Grid>
                 </Grid>
             </StackLayout>
+
+            <!--Popup ajout d'un prix-->
+            <ContentView Grid.ColumnSpan="2" Grid.RowSpan="2" x:Name="popupAddPrice" BackgroundColor="#C0808080" Padding="10, 0" IsVisible="false" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All">
+                <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+                    <StackLayout Orientation="Vertical" HeightRequest="200" WidthRequest="300" BackgroundColor="White">
+                        <DatePicker x:Name="priceDate" Margin="20,20,20,10"></DatePicker>
+                        <Entry x:Name="pricePopup" Margin="20,0,20,0" Placeholder="Prix" Text="0" Keyboard="Numeric"></Entry>
+                        <Button Margin="20,0,20,0" Text="Ajouter" Clicked="AddPricePopup_Clicked"></Button>
+                    </StackLayout>
+                </StackLayout>
+                <ContentView.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="PopupTapped" />
+                </ContentView.GestureRecognizers>
+            </ContentView>
+            
         </Grid>
     </ContentPage.Content>
 </ContentPage>
